--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ru_newspaper_test",
   "version": "0.1.0",
+  "homepage": "rg_test",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -12,6 +13,7 @@
     "@types/react-dom": "^18.2.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
